# diffiehellmanlib

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  changelog.txt  pyproject.toml  setup.py  tester.py
diffiehellmanlib/: wrapper.py
diffiehellmanlib/src/: utils.cpp  utils.h
tests/: config.json  maintester.py
